<resources>
    <string name="app_name">NONo笔记</string>
    <string name="pic_store">http://diandianapp-keypic.stor.sinaapp.com/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="action_message">消息</string>
    <string name="action_share">分享</string>
    <string name="action_delete">删除</string>
    <string name="action_save">保存</string>
    <string name="action_change_group">更换文集</string>
    <string name="title_activity_group_note">GroupNoteActivity</string>
    <string name="title_activity_date_note">GroupDateActivity</string>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
    <string name="title_activity_note_edit">NoteEditActivity</string>
    <string name="firstin_title1">长按我!</string>
    <string name="firstin_content1">
        <Data><![CDATA[<p><span style ="font-size:1.0em">长</span><span style ="font-size:1.0em">按</span><span style ="font-size:1.0em">我</span><span style ="font-size:1.0em">!</span>
<span style ="font-size:1.0em">1</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">快捷</span><span style ="font-size:1.0em">删除</span><span style ="font-size:1.0em">我</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">2</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">快捷</span><span style ="font-size:1.0em">编辑</span><span style ="font-size:1.0em">我</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">3</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">把我</span><span style ="font-size:1.0em">导出为</span><span style ="font-size:1.0em">p</span><span style ="font-size:1.0em">d</span><span style ="font-size:1.0em">f</span><span style ="font-size:1.0em">!</span><span style ="font-size:1.0em">(</span><span style ="font-size:1.0em">需要</span><span style ="font-size:1.0em">联网</span><span style ="font-size:1.0em">)</span><br>
<span style ="font-size:1.0em">4</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">复制我</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">5</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">把我</span><span style ="font-size:1.0em">分享到</span><span style ="font-size:1.0em">答记</span><span style ="font-size:1.0em">模块</span><span style ="font-size:1.0em">!</span></p>
 ]]> </Data></string>
    <string name="firstin_title2">看顶端</string>
    <string name="firstin_content2"><Data><![CDATA[<p><span style ="font-size:1.0em">顶部</span><span style ="font-size:1.0em">菜单</span><span style ="font-size:1.0em">主要</span><span style ="font-size:1.0em">用来</span><span style ="font-size:1.0em">:</span><br>
<span style ="font-size:1.0em">1</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">搜索</span><span style ="font-size:1.0em">自己</span><span style ="font-size:1.0em">的</span><span style ="font-size:1.0em">笔记</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">而且</span><span style ="font-size:1.0em">还可以</span><span style ="font-size:1.0em">展开</span><span style ="font-size:1.0em">所有</span><span style ="font-size:1.0em">标签</span><span style ="font-size:1.0em">哦</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">2</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">查看</span><span style ="font-size:1.0em">其他</span><span style ="font-size:1.0em">N</span><span style ="font-size:1.0em">O</span><span style ="font-size:1.0em">友</span><span style ="font-size:1.0em">给你发的</span><span style ="font-size:1.0em">私信</span><br>
<span style ="font-size:1.0em">3</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">查看</span><span style ="font-size:1.0em">答记</span><span style ="font-size:1.0em">社区</span><span style ="font-size:1.0em">的</span><span style ="font-size:1.0em">新通知</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">4</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">备份</span><span style ="font-size:1.0em">所有笔记为</span><span style ="font-size:1.0em">t</span><span style ="font-size:1.0em">x</span><span style ="font-size:1.0em">t</span><br>
<span style ="font-size:1.0em">5</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">打开</span><span style ="font-size:1.0em">设置</span><span style ="font-size:1.0em">页</span><br>
<span style ="font-size:1.0em">6</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">笔记</span><span style ="font-size:1.0em">导入</span><span style ="font-size:1.0em">导出</span></p>
 ]]> </Data></string>
    <string name="firstin_title3">点进这条笔记</string>
    <string name="firstin_content3"><Data><![CDATA[<p><span style ="font-size:1.0em">点进这条笔记</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">双击</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">直接</span><span style ="font-size:1.0em">编辑</span><span style ="font-size:1.0em">哦</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">右上角</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">切换</span><span style ="font-size:1.0em">文集</span><span style ="font-size:1.0em">~</span><br>
<span style ="font-size:1.0em">右下角</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">分享</span><span style ="font-size:1.0em">笔记</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">普通</span><span style ="font-size:1.0em">文字</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">微博</span><span style ="font-size:1.0em">长图片</span><span style ="font-size:1.0em">都可以哦</span><span style ="font-size:1.0em">~</span></p>
 ]]> </Data></string>
    <string name="firstin_title4">左侧侧滑开启更多</string>
    <string name="firstin_content4"><Data><![CDATA[<p><span style ="font-size:1.0em">1</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">回收站</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">你丢弃的</span><span style ="font-size:1.0em">笔记</span><span style ="font-size:1.0em">都可以在</span><span style ="font-size:1.0em">这儿</span><span style ="font-size:1.0em">找到哦</span><span style ="font-size:1.0em">~</span><br>
<span style ="font-size:1.0em">2</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">更多归类</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">文集</span><span style ="font-size:1.0em">?</span><span style ="font-size:1.0em">时间</span><span style ="font-size:1.0em">?</span><span style ="font-size:1.0em">全都可以</span><span style ="font-size:1.0em">~</span><br>
<span style ="font-size:1.0em">3</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">更有</span><span style ="font-size:1.0em">答记</span><span style ="font-size:1.0em">模块</span><span style ="font-size:1.0em">来按</span><span style ="font-size:1.0em">喜好</span><span style ="font-size:1.0em">发布</span><span style ="font-size:1.0em">自己</span><span style ="font-size:1.0em">的</span><span style ="font-size:1.0em">笔记</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">同人</span><span style ="font-size:1.0em">小说</span><span style ="font-size:1.0em">?</span><span style ="font-size:1.0em">烦恼</span><span style ="font-size:1.0em">心情</span><span style ="font-size:1.0em">?</span><span style ="font-size:1.0em">喜悦</span><span style ="font-size:1.0em">分享</span><span style ="font-size:1.0em">?</span><span style ="font-size:1.0em">都塞</span><span style ="font-size:1.0em">进去吧</span><span style ="font-size:1.0em">!</span></p>
 ]]> </Data></string>
    <string name="firstin_title5">开启个性化笔记</string>
    <string name="firstin_content5"><Data><![CDATA[<p><span style ="font-size:1.0em">主页面</span><span style ="font-size:1.0em">进去</span><span style ="font-size:1.0em">右上角</span><span style ="font-size:1.0em">设置</span><span style ="font-size:1.0em">菜单</span><span style ="font-size:1.0em">看看</span><span style ="font-size:1.0em">?</span><br>
<span style ="font-size:1.0em">1</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">开始</span><span style ="font-size:1.0em">定制</span><span style ="font-size:1.0em">自己的</span><span style ="font-size:1.0em">主题色</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">2</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">设置</span><span style ="font-size:1.0em">自己的</span><span style ="font-size:1.0em">手势密码</span><span style ="font-size:1.0em">!</span><br>
<span style ="font-size:1.0em">3</span><span style ="font-size:1.0em">、</span><span style ="font-size:1.0em">各种</span><span style ="font-size:1.0em">各样的</span><span style ="font-size:1.0em">其他</span><span style ="font-size:1.0em">个性化</span><span style ="font-size:1.0em">设置</span></p>
 ]]> </Data></string>
    <string name="firstin_title6">右滑删除</string>
    <string name="firstin_content6"><Data><![CDATA[
<p><span style ="font-size:1.0em">右滑我</span><span style ="font-size:1.0em">删除</span><span style ="font-size:1.0em">这条笔记</span><span style ="font-size:1.0em">，</span><span style ="font-size:1.0em">可以</span><span style ="font-size:1.0em">在</span><span style ="font-size:1.0em">回收站</span><span style ="font-size:1.0em">找到我</span><span style ="font-size:1.0em">哦</span><span style ="font-size:1.0em">!</span></p>
 ]]> </Data></string>
    <string name="firstin_title7">开始使用NONo笔记</string>
    <string name="firstin_content7"> <Data><![CDATA[ 体验清爽的Material Design风格笔记APP!<br>
1、笔记分类，按时间、按小组，应有尽有！<br>
2、界面清爽，各种Material Design动画，蹦跳？旋转？淡入淡出？这些都有！还有更多！<br>
3、独家的富文本编辑器输入，字体加粗、加斜、下划线、角标、图片插入、数学公式输入（待开发）应有尽有！<br>
NONo-Note Only Note，不只是笔记！<br>
1、笔记云端存储，每一条笔记都是自己的积攒，不能丢失！<br>
2、记录问题没人会？独特问答社区拯救你，交流问题？结识朋友？解决问题？全交给我！<br>
还想知道其他的好玩的特点？<br>
没有任何广告和恶意弹窗的清爽笔记APP，快来体验！ ]]> </Data>
    </string>
    <string name="firstin_title9">开始创建MarkDown笔记.md</string>
    <string name="prompt_account">账户</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register">注册</string>
    <string name="account_username_control">登陆用户名(3-15位)</string>
    <string name="email_control">你的邮箱地址</string>
    <string name="password_control">输入6-12位密码</string>
    <string name="password_again_control">再次输入密码</string>
    <string name="realname_control">你的姓名(一定要填的~)</string>
    <string name="university_control">你所在大学(可以不填哦~)</string>
    <string name="subkect_control">你的专业(可以不填哦~)</string>
    <string name="action_log_out">账号登出</string>
    <string name="action_save_note">笔记导出</string>
    <string name="action_lable">标签</string>
    <string name="action_undo">撤销操作</string>
    <string name="mail_string">注册时的邮箱</string>
    <string name="verify_code_string">验证码</string>
    <string name="new_password_string">新的密码(至少为6位)</string>
    <string name="new_password_dup_string">再次输入新的密码</string>
    <string name="action_import_note">笔记导入</string>
    <string name="action_delete_all">永久删除全部</string>
    <string name="action_restore_all">恢复全部</string>
    <string name="action_save_note_txt">导出为TXT</string>
    <string name="action_share_nono">推荐NONo给朋友</string>
    <string name="action_log_in">登陆NONo</string>
    <string name="action_change_bg_color">换个背景色</string>
    <string name="action_pay_developer">帮助NONo更稳定</string>
    <string name="action_help">新手入门</string>
    <string name="action_recover">还原</string>
    <string name="action_select_all">全选</string>
</resources>