<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item android:id="@+id/action_recover"
        android:title="@string/action_recover"
        android:icon="@drawable/ic_replay_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always"/>
</menu>