<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.notedemo.Activity.NoteDetailActivity">
      <!--<item android:id="@+id/action_share"-->
            <!--android:title="@string/action_share"-->
            <!--android:icon="@mipmap/ic_share_white_24dp"-->
            <!--android:orderInCategory="100"-->
            <!--app:showAsAction="never"/>-->
      <item android:id="@+id/action_change_group"
          android:title="@string/action_change_group"
          android:icon="@drawable/ic_swap_horiz_white_24dp"
          android:orderInCategory="100"
          app:showAsAction="always"/>
      <item android:id="@+id/action_share"
          android:title="@string/action_share"
          android:icon="@mipmap/ic_share_white_24dp"
          android:orderInCategory="100"
          app:showAsAction="always"/>
      <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:icon="@mipmap/ic_delete_white_24dp"
          android:orderInCategory="100"
          app:showAsAction="never"/>
      <item
          android:id="@+id/action_change_bg_color"
          android:icon="@drawable/ic_format_color_fill_white_24dp"
          android:title="@string/action_change_bg_color"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
