<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_realname"
            android:hint="@string/realname_control"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_university"
            android:hint="@string/university_control"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:clickable="true"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_subject"
            android:hint="@string/subkect_control"
            />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
    </ScrollView>