<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/dimen_16_dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.seki.noteasklite.Activity.FindPasswordActivity"
    tools:showIn="@layout/activity_find_password">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/acount_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
             android:layout_width="match_parent"
            android:layout_height="wrap_content" android:hint="@string/mail_string"
            android:imeActionId="@+id/acount_info"
            android:imeOptions="actionUnspecified" android:inputType="textWebEmailAddress"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/acount_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                 android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/verify_code_string"
                android:imeActionId="@+id/acount_info"
                android:imeOptions="actionUnspecified" android:inputType="textWebEmailAddress"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/new_password_string"
                android:imeActionId="@+id/acount_info"
                android:imeOptions="actionUnspecified" android:inputType="textWebEmailAddress"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/account_new_password_dup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                 android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/new_password_dup_string"
                android:imeActionId="@+id/acount_info"
                android:imeOptions="actionUnspecified" android:inputType="textWebEmailAddress"
                android:maxLines="1" android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
